<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_baseline_local_offer_24"
            android:title="@string/menu_offer" />
        <item
            android:id="@+id/nav_newproduct"
            android:icon="@drawable/ic_baseline_new_product"
            android:title="@string/menu_newproduct" />
        <item
            android:id="@+id/nav_myorder"
            android:icon="@drawable/ic_baseline_shopping_cart"
            android:title="@string/menu_myorder" />
        <item
            android:id="@+id/nav_mycart"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/menu_mycart" />
    </group>
</menu>