<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.grocerystore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.grocerystore.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.grocerystore.ui.category.CatagoryFragment"
        android:label="Category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offer"
        android:name="com.example.grocerystore.ui.OfferFragment"
        android:label="@string/menu_offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_newproduct"
        android:name="com.example.grocerystore.ui.NewProductFragment"
        android:label="@string/menu_newproduct"
        tools:layout="@layout/fragment_new_product"/>

    <fragment
        android:id="@+id/nav_myorder"
        android:name="com.example.grocerystore.ui.MyOrderFragment"
        android:label="My Order"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/nav_mycart"
        android:name="com.example.grocerystore.ui.MyCartFragment"
        android:label="My Cart"
        tools:layout="@layout/fragment_my_cart" />

</navigation>